--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,43 +1,41 @@
 disabled_rules:
   - trailing_whitespace
-  - line_length
-  - type_body_length
-  - file_length
-  - function_body_length
-  - cyclomatic_complexity
-  - nesting
+  - todo
 
 opt_in_rules:
   - empty_count
+  - empty_string
   - closure_spacing
+  - contains_over_filter_count
+  - explicit_init
   - first_where
-  - implicit_return
   - modifier_order
-  - operator_usage_whitespace
-  - sorted_first_last
-  - toggle_bool
-  - yoda_condition
-
-included:
-  - Sources
-  - Tests
+  - overridden_super_call
+  - private_action
+  - redundant_nil_coalescing
 
 excluded:
   - .build
-  - Packages
+  - Package.swift
   - DerivedData
 
+line_length:
+  warning: 120
+  error: 200
+  ignores_comments: true
+
+type_body_length:
+  warning: 300
+  error: 500
+
+file_length:
+  warning: 500
+  error: 1000
+
 identifier_name:
-  min_length:
-    warning: 2
-    error: 1
+  min_length: 2
   excluded:
     - id
     - x
     - y
-    - z
-    - i
-    - j
-    - r
-    - g
-    - b
+    - to
